--- a/style.css
+++ b/style.css
@@ -14,4 +14,4 @@ p{
 
 input{ background-color: springgreen;}
 
-body{background-image: url(https://i.ytimg.com/vi/YofZmdWNmVg/maxresdefault.jpg)}
+body{background-image: url(https://okdiario.com/img/2022/10/18/los-gatos-pueden-ver-en-color-1.jpg)}
